# arduino_max

./: .gitignore
10.1_Max_to_Arduino/: max-to-arduino-complex.maxpat
551_562_final_project/: 551_project.maxpat  granulator_sketch.HEIC  spike_buffer.scd
552_project_1/: mux_max.maxpat  mux_max_wifi.maxpat  mux_wifi_v2.maxpat  mux_wifi_v3_shoes.maxpat
599_classification_piece/: .gitignore  config.py  five_class_classifier.py  predict.py  pyproject.toml  quantize_model.py  receive_prediction.maxpat  utilities.py
599_classification_piece/mfccs/: birds_files.npy  fire_files.npy  frogs_files.npy  frogs_mfccs.npy  water_files.npy  wind_files.npy  wind_mfccs.npy
599_classification_piece/mfccs/training_mfccs/: frog_mfccs.npy
599_classification_piece/model_checkpoints/1710960486/: 1710960486.weights.h5
599_classification_piece/model_checkpoints/1710960509/: 1710960509.weights.h5
599_classification_piece/src/: config.py  draw_markov.py  extract_mfccs.py  five_class_classifier.py  five_class_classifier_conv.py  predict.py  quantize_model.py  utilities.py  utilities_osc.py
599_classification_piece/trained_models/: accuracies_list.json  model1.keras  model1_8bit.keras  model2.keras  model3.keras  model4.keras  model_1710960486.keras  model_1710960509.keras
599_classification_piece/trained_models/model1markov/: confusion-markov-chain.gv
599_generative_piece/: .gitignore  pyproject.toml
7.2_OSCWifi/: OSCWifi.maxpat
a2dToSerialMaxMultiple_proximity/: a2dToSerialMaxMultiple.maxpat
arduino_multitasking_sequence_player/: arduino_multitasking_sequence_player.ino
(+139 files in other folders)
