[tool.poetry]
name = "599-classification-piece"
version = "0.1.0"
description = ""
authors = ["Molly Jones <mojones.e@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "^1.25.2"
pandas = "^2.2.1"
tensorflow = "2.15.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scipy = "^1.12.0"
librosa = "^0.10.1"
scikit-learn = "^1.4.1.post1"
tensorflow-model-optimization = "^0.8.0"
python-osc = "^1.8.3"
asyncio = "^3.4.3"
ffmpeg = "^1.4"
audioread = "^3.0.1"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
